<resources>
    <string name="app_name">MPlayer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="coupons">Coupons</string>
    <string name="identify">Identify This Song</string>
    <string name="s_language">Song Language</string>
    <string name="d_language">Display Language</string>
    <string name="app_Theme">App Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="help">Help</string>
</resources>
